--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 flask>=2.0.0
 requests>=2.25.0
 python-dotenv>=0.19.0
-openai>=0.27.0
-dingtalk-stream>=0.22.0
-langdetect==1.0.9 
+openai>=1.12.0
+dingtalk-stream>=0.3.0
+langdetect==1.0.9
+websockets>=10.0
+redis>=4.5.0
+python-dateutil>=2.8.2
+httpx[http2]>=0.24.0 
